# memory-mcp

./: .dockerignore  Dockerfile  README.txt  check_db.py  final_check.py  mcp_client.py  memory-mcp.code-workspace  memory-mcp.specify  pyproject.toml  task.md
.agents/workflows/: task_implementation_workflow.md
memory_data/: chroma.sqlite3
memory_data/vector_db/: chroma.sqlite3
memory_data_backup/vector_db/: chroma.sqlite3
src/memory_mcp/: __init__.py  db.py  server.py
src/memory_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
test_memory_data/: chroma.sqlite3
test_server_data/: chroma.sqlite3
tests/: run_tests.py  test_server_features.py
